# py-mediainfo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CI-test.yml  Release-pypi.yml
script/: download_lib.py
tests/: test_pymediainfo.py
